background image update

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   <label class="middle" for="screen">
     <div class="screen">
       <div class="glass"></div>
-      <span>Click here to0 <br>
-        <strong>Animate</strong>
+      <span>Click here to <br>
+        <strong>Animate</strong><br>
+        Daniel Snow<br>
+        nintendo-switch
       </span>
       
     </div>   
